--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
         "iostream": "cpp"
-    }
+    },
+    "C_Cpp.default.compilerPath": "/usr/bin/g++-13",
+    "cmake.ignoreCMakeListsMissing": true
 }
