--- a/ch3/CMakeLists.txt
+++ b/ch3/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8)
 project(chapter3)
 
 set(CMAKE_CXX_FLAGS "-std=c++11")
-
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 # 加入各子工程
 add_subdirectory(useEigen)
 add_subdirectory(useGeometry)
